--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     margin: auto;
     font-family: sans-serif;
@@ -7,10 +11,79 @@ body{
     display: inline-block;
 }
 header{
-    height:11%;
+    height:10%;
     width:100%;
     background-color: #2874f0;
 }
+
+
+.navbar{
+    background-color: white !important;
+}
+
+.brand{
+    margin-left: 120px;
+    padding: 0;
+}
+
+.logotext{
+    font-size: 13px;
+    margin-left: 65px;
+    font-style: italic;
+
+}
+
+.explore{
+    color: #b9a4a4;
+}
+.plus{
+    color: #ffc33f;
+}
+
+.search-main{
+    /* border: 1px solid red; */
+    
+}
+
+
+
+.box input[type=search]{
+    width:400px;
+    margin-left: 7px;
+    border:none !important;
+    outline: none;
+    background-color: #f0f5ff !important;
+    
+}
+
+.box input[type=search]:focus{
+    outline:none !important;
+}
+
+.box form{
+    background-color: #f0f5ff;
+    width:480px;
+    height: 35px;
+    border-radius: 20px;
+}
+
+.box button{
+    border:none;
+}
+
+.menu{
+    margin-left: 0px;
+}
+
+.icons{
+    padding-right:50px
+}
+
+.fa{
+    font-size: 17px;
+}
+
+
 
 header a img{
     float:left;
@@ -18,7 +91,9 @@ header a img{
     height:80%;
     margin: 5px 15px;
 }
-
+.slid{
+    margin-top:1%;
+}
 .sl{
     float: right;
     margin-top: 30px;
@@ -35,25 +110,46 @@ header a img{
     width:100%;
     
     background-color: #ffffff;
-    border-bottom: solid gray 1px;
+   
     margin-top: 1%;
      
    /* border:solid red 2px;*/
 }
 
-#heading h2{
-    text-align: center;
-    
+#heading span{
+    font-weight: bold;
+    margin-left:50px;
     padding-top: 2%;
     
 }
 
-#heading p{
-    text-align: center;
-    color:gray;
-    padding: 0%;
+#heading button{
+    background-color: #1c41d6;
+    color:#f6f7fe;
+    border-radius: 50%;
+    padding:5px;
+    margin-right: 73px;
+    border: none;
 }
 
+#heading .head1{
+    font-size: 20px;;
+}
+#heading .view{
+    margin-left: 67%;
+}
+
+.control{
+    width: 3%;
+    margin-top: 58px;
+    height: 88px;
+    background-color:white;
+    opacity: 1;
+}
+
+.control span i{
+    color:black;
+}
 
 #products{
     width:100%;
@@ -63,7 +159,13 @@ header a img{
     background-color: white;
 }
     
-   
+#products2{
+    width:100%;
+    display: flex;
+    flex-wrap: wrap;    
+    margin: 1%;
+    background-color: white;
+}   
 .card{
     /*height:350px;*/
     width:15%;
@@ -105,6 +207,9 @@ header a img{
 
 }
 
+.price{
+    margin-top: 10px;
+}
 #off{
     color:green;
     font-size: 13px;
