--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ header{
 #coupon{
     height:300px;
     width:600px;
-    background-color: #f1f3f6;;
+    background-color: #f1f3f6;
     position: absolute;
     margin-top: 2%;
     margin-left: 34%;
