--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,8 +79,7 @@ form .search-btn:focus{
 #coupon{
     background-image: url(https://images.pexels.com/photos/5625130/pexels-photo-5625130.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
     background-size: cover;
-    opacity:;
-    height:300px;
+    height:400px;
     width:500px;
     background-color: white;
     position: absolute;
@@ -92,16 +91,19 @@ form .search-btn:focus{
 }
 
 #coupon h2{
-    margin-top:5%;
-    margin-bottom:4%;
+    margin-top:18%;
+    margin-bottom:14%;
 }
 .couponcont{
     text-align: center;
 }
 #coupon p{
-    font-size: 15px;
+    font-size: 18px;
     font-weight: bold;
+}
 
+#coupon h2{
+    font-weight: bold;
 }
 
 #coupon .code{
@@ -109,6 +111,8 @@ form .search-btn:focus{
     font-size: 25px;
     padding:5px;
     display: inline;
+    background-color: gray;
+    color: white ;
 }
 #coupon .close{
     background-color: blue;
