--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,6 @@
 a{
     text-decoration: none;
 }
-<<<<<<< HEAD
 
 body{
     background-color: #f1f3f6;
@@ -15,37 +14,11 @@ body{
 
 .dark{
     background-color: black;
-=======
-.dark{
-    background-color:black;
-    color:white;
-}
-.maindiv{
-    display: inline-block;
->>>>>>> f7ec185f62c25e5e6a9a9244fa5dd49bccba597d
 }
 header{
     width:100%;
 }
 
-#coupon{
-    height:300px;
-    width:600px;
-    background-color: #f1f3f6;
-    position: absolute;
-    margin-top: 2%;
-    margin-left: 34%;
-    z-index: 100;
-    visibility:hidden;
-}
-
-#coupon button{
-    float: right;
-}
-
-#coupon span{
-    font-size: 30px;
-}
 
 .navbar{
     background-color: white !important;
@@ -96,6 +69,11 @@ form .search-btn:focus{
 
 .menu .fa{
     margin-top:5px;
+}
+
+.weatherbtn{
+    background: transparent;
+    border: none;
 }
 
 #crsl{
@@ -353,8 +331,16 @@ footer{
 }
 
 @media only screen and (max-width:992px){
-   
+    .search-container{
+       display: none;
+    }
 
+    .bulb2{
+        display:none;
+    }
+    .weatherbtn2{
+        display: none;
+    }
     .carousel-item{
         height: 250px !important;
     }
@@ -367,14 +353,11 @@ footer{
    
 }
 
-@media only screen and (max-width:1042px){
-.search-container{
-    display: none;
- }
-}
-
 @media only screen and (min-width:992px){
     .darkbtn1{
+        display: none;
+    }
+    .weatherbtn{
         display: none;
     }
 }
@@ -395,7 +378,6 @@ footer{
     .item .card {
         width:150px;
     }
-<<<<<<< HEAD
 
 }
 
@@ -443,6 +425,4 @@ footer{
         margin-left: 7%;
         width:350px;
     }
-=======
->>>>>>> f7ec185f62c25e5e6a9a9244fa5dd49bccba597d
 }
